# piper-tts-rust

./: .gitignore  Cargo.toml  README.md  arpabet-mapping.txt
examples/: basic_tts.rs
src/: lib.rs  main.rs  model_handler.rs  phoneme_gen.rs
