[package]
name = "piper-tts-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "download-binaries", "copy-dylibs"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokenizers = "0.21.1"


[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1
debug = false