[package]
name = "piper-tts-rust"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Simple interface for Piper TTS onnx models made with a pykeio ort onnx runtime."
repository = "https://github.com/aspicho/piper-tts-rust"
license = "MIT"
keywords = ["piper", "tts", "text-to-speech", "g2p", "phonemization"]
authors = ["Aspicho <mishchenkodaniil@gmail.com>"]
homepage = "https://github.com/aspicho/piper-tts-rust"

[lib]
name = "piper_tts_rust"
path = "src/lib.rs"

[[example]]
name = "basic_tts"
path = "examples/basic_tts.rs"

[dependencies]
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.10", features = ["ndarray", "download-binaries", "copy-dylibs"] }
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.142"
tokenizers = "0.21.1"


[profile.release]
opt-level = 3
lto = "thin"
panic = "abort"
codegen-units = 1
debug = false